--- a/index.html
+++ b/index.html
@@ -1,11 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PH Tube</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .font {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
-<body>
-    
+
+
+<body class="font mx-28">
+
+    <header id="header">
+        <!-- <div class="flex items-center justify-between mt-12">
+            <div>
+                <img class="w-52" src="./images/Logo.png" alt="">
+            </div>
+            <div class="flex justify-center h-10 ">
+                <button class="btn px-12 text-xl">Sort by view</button>
+            </div>
+            <div>
+                <button class="btn bg-[#FF1F3D] text-white px-8 hover:text-black">Blog</button>
+            </div>
+        </div>
+        <hr class="mt-10 border-[2px]"> -->
+    </header>
+
+
+    <main>
+
+        <section class="mt-9">
+            <div id="all-btn-container" class="all-btn text-center flex gap-16 justify-center">
+                <!-- <div>
+                    <button class="btn h-[60px] w-[120px] text-xl">Button</button>
+                </div>
+                <div>
+                    <button class="btn h-[60px] w-[120px] text-xl">Button</button>
+                </div>
+                <div>
+                    <button class="btn h-[60px] w-[120px] text-xl">Button</button>
+                </div>
+                <div>
+                    <button class="btn h-[60px] w-[120px] text-xl">Button</button>
+                </div> -->
+            </div>
+        </section>
+
+
+        <section class="mt-10 ">
+            <div class="card-container grid gap-5 md:grid-cols-2 lg:grid-cols-4 justify-items-center">
+                
+                <div>
+                    <div class="card  bg-base-100">
+                        <figure><img class="w-[500px]" src="./images/Rectangle 1.png" alt="Shoes" /></figure>
+                        <div class="mt-8">
+                            <div class="flex pl-3">
+
+                                <div>
+                                    <img class="w-16" src="./images/Ellipse 1.png" alt="">
+                                </div>
+                                <div class="ml-3 space-y-3">
+                                    <h1 class="text-lg font-bold ">Building a Winning UX Strategy Using the Kano Model</h1>
+                                    <div class="flex gap-5">
+                                        <p class="text-base">Awlad Hossain</p>
+                                        <p>#</p>
+                                    </div>
+                                    <p>91K views</p>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                </div>
+
+
+
+
+                <div>
+                    <div class="card  bg-base-100">
+                        <figure><img class="w-[500px]" src="./images/Rectangle 1.png" alt="Shoes" /></figure>
+                        <div class="mt-8">
+                            <div class="flex pl-3">
+
+                                <div>
+                                    <img class="w-16" src="./images/Ellipse 1.png" alt="">
+                                </div>
+                                <div class="ml-3 space-y-3">
+                                    <h1 class="text-lg font-bold ">Building a Winning UX Strategy Using the Kano Model</h1>
+                                    <div class="flex gap-5">
+                                        <p class="text-base">Awlad Hossain</p>
+                                        <p>#</p>
+                                    </div>
+                                    <p>91K views</p>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                </div>
+
+
+
+
+                <div>
+                    <div class="card  bg-base-100">
+                        <figure><img class="w-[500px]" src="./images/Rectangle 1.png" alt="Shoes" /></figure>
+                        <div class="mt-8">
+                            <div class="flex pl-3">
+
+                                <div>
+                                    <img class="w-16" src="./images/Ellipse 1.png" alt="">
+                                </div>
+                                <div class="ml-3 space-y-3">
+                                    <h1 class="text-lg font-bold ">Building a Winning UX Strategy Using the Kano Model</h1>
+                                    <div class="flex gap-5">
+                                        <p class="text-base">Awlad Hossain</p>
+                                        <p>#</p>
+                                    </div>
+                                    <p>91K views</p>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                </div>
+
+
+
+
+                <div>
+                    <div class="card  bg-base-100">
+                        <figure><img class="w-[500px]" src="./images/Rectangle 1.png" alt="Shoes" /></figure>
+                        <div class="mt-8">
+                            <div class="flex pl-3">
+
+                                <div>
+                                    <img class="w-16" src="./images/Ellipse 1.png" alt="">
+                                </div>
+                                <div class="ml-3 space-y-3">
+                                    <h1 class="text-lg font-bold ">Building a Winning UX Strategy Using the Kano Model</h1>
+                                    <div class="flex gap-5">
+                                        <p class="text-base">Awlad Hossain</p>
+                                        <p>#</p>
+                                    </div>
+                                    <p>91K views</p>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+        </section>
+
+
+
+
+
+
+    </main>
+
+
+
+    <script src="./js/phTube.js"></script>
 </body>
+
 </html>
