--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 <body class="font md:mx-6 lg:mx-28">
 
     <header id="header">
-        <!-- <div class="flex items-center justify-between mt-12">
-            <div>
-                <img class="w-52" src="./images/Logo.png" alt="">
+        <!-- <div class="flex items-center justify-between mt-12 gap-5"> -->
+            <!-- <div>
+                <img class="md:w-52" src="./images/Logo.png" alt="">
             </div>
             <div class="flex justify-center h-10 ">
-                <button class="btn px-12 text-xl">Sort by view</button>
+                <button class="btn md:px-12 text-xl">Sort by view</button>
             </div>
             <div>
-                <button class="btn bg-[#FF1F3D] text-white px-8 hover:text-black">Blog</button>
+                <button class="btn bg-[#FF1F3D] text-white md:px-8 hover:text-black">Blog</button>
             </div>
         </div>
         <hr class="mt-10 border-[2px]"> -->
@@ -43,8 +43,8 @@
 
     <main>
 
-        <section class="mt-9">
-            <div id="all-btn-container" class="all-btn text-center flex gap-16 justify-center">
+        <section class="mt-9 ">
+            <div id="all-btn-container" class="all-btn text-center flex flex-wrap gap-16 justify-center">
                 <!-- <div>
                     <button class="btn h-[60px] w-[120px] text-xl">Button</button>
                 </div>
